Bug 502898 - White diagram background when using dark theme on KDE desktop
Summary: White diagram background when using dark theme on KDE desktop
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-16 21:29 UTC by Ralf Habacker
Modified: 2025-04-16 21:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2025-04-16 21:29:07 UTC
SUMMARY
Without this, white text is shown on white background when a dark color
scheme is used, because the text follows the color scheme but the background
remains white.


STEPS TO REPRODUCE
1. build umbrello from git source on Linux
2. On a KDE desktop setup using dark theme
3. start umbrello

OBSERVED RESULT
The background of the diagram window is white and not black as expected.

EXPECTED RESULT
The background of a diagram window should be black.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2025-04-16 21:31:05 UTC
Git commit 4f725b047c90d38b661e7bc92951e8d937491f5e by Ralf Habacker.
Committed on 16/04/2025 at 21:30.
Pushed by habacker into branch 'release/25.04'.

Fix showing white diagram background on KDE desktop setup with dark theme
FIXED-IN: 25.04.0

M  +1    -0    doc/xml/umbrello-diagrams.dtd
M  +2    -0    umbrello/dialogs/pages/uioptionspage.cpp
M  +7    -0    umbrello/optionstate.cpp
M  +1    -0    umbrello/optionstate.h
M  +5    -0    umbrello/umbrello.kcfg
M  +4    -2    umbrello/umlscene.cpp

https://invent.kde.org/sdk/umbrello/-/commit/4f725b047c90d38b661e7bc92951e8d937491f5e