Fix showing white diagram background on KDE desktop setup with dark theme

BUG:502898
FIXED-IN: 25.04.0